# governAI

./: .gitignore  AGENTS.md  AGENTS.override.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.v0.2-cli-foundation.md  GIT.md  LICENSE  MEMORY.md  README.md  STATE.v0.2-cli-foundation.md  TODO.v0.2-cli-foundation.md  pyproject.toml
.opencode/: README.md  _DECISIONS.md  _STATE.md  _TODO.md  _constitution.md
.opencode/commands/: adr.md  architect-security.md  architect.md  brainstorm.md  bugfix.md  coder.md  conflict.md  doc.md  feature.md  governance.md  init-context.md  nlspec.md  planner.md  preflight.md  qa.md  release.md  review.md  security.md  triage.md  worktree.md
.opencode/skills/adr/: SKILL.md
.opencode/skills/architect/: SKILL.md
.opencode/skills/architect-security/: SKILL.md
.opencode/skills/artifacts/: SKILL.md
.opencode/skills/avoid-ai-writing/: SKILL.md
.opencode/skills/coder/: SKILL.md
.opencode/skills/conflict/: SKILL.md
.opencode/skills/doc/: SKILL.md  (+1 more)
catalog/: index.yaml
docs/engineering/: index.md
docs/governance/: catalog-spec.md  constitution.md  levels.md  workflows.md
docs/guides/: getting-started.md
docs/overview/: terminology.md
scripts/: compile.py  sync_overlays_to_skills.py  validate_catalog.py
scripts/compilers/: markdown_parser.py  opencode_compiler.py
sources/overlays/: diagnostics.md  hypothesis-driven.md  strict-mode.md  structured-analysis.md
sources/personas/: system-engineer.md
specs/: README.md
src/governai/: cli.py
src/governai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+51 files in other folders)
